kubernetes-templates/elastic-search/0/elasticsearch.yaml
apiVersion: v1
kind: ReplicationController
metadata:
  name: elasticsearch-logging-v1
  namespace: kube-system
  labels:
    k8s-app: elasticsearch-logging
    version: v1
    kubernetes.io/cluster-service: "true"
spec:
  replicas: 2
  selector:
    k8s-app: elasticsearch-logging
    version: v1
  template:
    metadata:
      labels:
        k8s-app: elasticsearch-logging
        version: v1
        kubernetes.io/cluster-service: "true"
    spec:
      containers:
      - image: gcr.io/google_containers/elasticsearch:v2.4.1-1
        name: elasticsearch-logging
        resources:
          # need more cpu upon initialization, therefore burstable class
          limits:
            cpu: 1000m
          requests:
            cpu: 100m
        ports:
        - containerPort: 9200
          name: db
          protocol: TCP
        - containerPort: 9300
          name: transport
          protocol: TCP
        volumeMounts:
        - name: es-persistent-storage
          mountPath: /data
      volumes:
      - name: es-persistent-storage
        emptyDir: {}

apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-logging
  namespace: kube-system
  labels:
    k8s-app: elasticsearch-logging
    kubernetes.io/cluster-service: "true"
    kubernetes.io/name: "Elasticsearch"
spec:
  clusterIP: ${ELASTIC_SEARCH_CLUSTER_IP}
  ports:
  - port: ${ELASTIC_DB_PORT}
    targetPort: 9200
    protocol: TCP
    name: db
  - port: ${ELASTIC_PORT}
    targetPort: 9300
    protocol: TCP
    name: transport
  selector:
    k8s-app: elasticsearch-logging
  type: ClusterIP

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  generation: 1
  name: elasticsearch-logging
  namespace: default
spec:
  rules:
  - host: ${ELASTIC_SEARCH_HOST_NAME}
    http:
      paths:
      - backend:
          serviceName: elasticsearch-logging
          servicePort: ${ELASTIC_PORT}
        path: /
